style/fix jumpy layers panel

--- a/webserver/static/isptoolbox/src/sass/molecules/_map_layer_sidebar.sass
+++ b/webserver/static/isptoolbox/src/sass/molecules/_map_layer_sidebar.sass
@@ -5,7 +5,7 @@
   overflow-y: scroll
   max-height: calc(100vh - 100px)
   min-width: 350px
-  max-width: 400px
+  width: 400px
 
 .market_overlay--section
   #ap-objects-section + #area-objects-section 
